Tools/TestWebKitAPI/Tests/WebKit/WebRTC.mm
@@ -113,6 +113,18 @@ TEST(WebKit2, RTCDataChannelPostMessage)
     "function transferDataChannel() {"
     "   doTransferDataChannelTest();"
     "}"
+    ""
+    "async function closePCTest(pc) {"
+    "    const promise1 = new Promise(resolve => navigator.serviceWorker.onmessage = (event) => resolve(event.data));"
+    "    const promise2 = new Promise(resolve => channel2.onclose = resolve);"
+    "    pc.close();"
+    "    await promise2;"
+    "    window.webkit.messageHandlers.webrtc.postMessage(await promise1);"
+    "}"
+    ""
+    "function closePC1() {"
+    "    closePCTest(pc1);"
+    "}"
     "</script>"_s;
 
     static constexpr auto js = "self.onmessage = (event) => { "
@@ -158,6 +170,7 @@ TEST(WebKit2, RTCDataChannelPostMessage)
         EXPECT_WK_STREQ(@"READY", [message body]);
         isReady = true;
     }];
+
     isReady = false;
     [webView2 loadRequest:request];
     TestWebKitAPI::Util::run(&isReady);
@@ -175,6 +188,19 @@ TEST(WebKit2, RTCDataChannelPostMessage)
     // Transfer is probably out-of-process.
     isReady = false;
     [webView2 stringByEvaluatingJavaScript:@"transferDataChannel()"];
+    TestWebKitAPI::Util::run(&isReady);
+
+    [messageHandler setMessageHandler:[](WKScriptMessage *message) {
+        EXPECT_WK_STREQ(@"close event", [message body]);
+        isReady = true;
+    }];
+
+    isReady = false;
+    [webView1 stringByEvaluatingJavaScript:@"closePC1()"];
+    TestWebKitAPI::Util::run(&isReady);
+
+    isReady = false;
+    [webView2 stringByEvaluatingJavaScript:@"closePC1()"];
     TestWebKitAPI::Util::run(&isReady);
 }
 
